# python-jackdbus

./: LICENSE  README.org  jack_dbus.py  pyproject.toml
jackdbus/: __main__.py
tests/: test_jackdbus.py
