[tool.poetry]
name = "jackdbus"
version = "0.1.0"
description = ""
authors = ["Roman Sommer <roman@resonant-bytes.de>"]

[tool.poetry.dependencies]
python = "^3.10"
dbus-python = "^1.2.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
